objects/Private_Comment__c.object
<CustomObject>
    <description>Object to track Private Comments by Customer Experience team</description>
    <fields>
        <fullName>AMOUNT_IN_WORDS__c</fullName>
        <label>AMOUNT IN WORDS</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMOUNT__c</fullName>
        <label>AMOUNT</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Added_to_Case_Comments__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Click Publish button to post as a Case Comment</inlineHelpText>
        <label>Is Published ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BANK_ACCOUNT_NO__c</fullName>
        <label>BANK ACCOUNT NO.</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BANK_BRANCH_ADDRESS__c</fullName>
        <label>BANK BRANCH ADDRESS</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BANK_NAME__c</fullName>
        <label>BANK NAME</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Private Comments</relationshipLabel>
        <relationshipName>Private_Comments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DT_OF_COMPLETION__c</fullName>
        <label>DT OF COMPLETION</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_OF_REQUEST__c</fullName>
        <label>DT OF REQUEST</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IFSC_CODE_NEFT_CODE__c</fullName>
        <label>IFSC CODE/NEFT CODE#</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mode__c</fullName>
        <label>Mode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAME_OF_CUSTOMER_AS_PER_BANK__c</fullName>
        <label>NAME OF CUSTOMER AS PER BANK</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PNR_NO__c</fullName>
        <label>PNR NO.</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REASON_FOR_COMPENSATION__c</fullName>
        <label>REASON FOR COMPENSATION</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REQUEST_SENT_BY__c</fullName>
        <label>REQUEST SENT BY</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receipt_Date__c</fullName>
        <label>Receipt Date</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRANSFER_REFERENCE__c</fullName>
        <label>TRANSFER REFERENCE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Private Comment</label>
    <nameField>
        <displayFormat>PC-{00000}</displayFormat>
        <label>Record No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Private Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>